Add Ruby tools for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ compiler:
   - clang
   - gcc
 
+before_install: bundle
+
 script:
   - cmake .
   - make
   - make test
+  - bundle exec rspec spec/
