Add 2_6_cp.c code snippet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,3 +7,4 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror")
 add_executable(2_2_env 2_2_env.c)
 add_executable(2_3_env 2_3_env.c)
 add_executable(2_5_sym_link 2_5_sym_link.c)
+add_executable(2_6_cp 2_6_cp.c)
