Add 2.7 code snippet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(2_2_env 2_2_env.c)
 add_executable(2_3_env 2_3_env.c)
 add_executable(2_5_sym_link 2_5_sym_link.c)
 add_executable(2_6_cp 2_6_cp.c)
+add_executable(2_7_file_mode 2_7_file_mode.c)
