--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(2_5_sym_link 2_5_sym_link.c)
 add_executable(2_6_cp 2_6_cp.c)
 add_executable(2_7_file_mode 2_7_file_mode.c)
 add_executable(2_8_file_stat 2_8_file_stat.c)
+add_executable(2_12_signal 2_12_signal.c)
