--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(2_6_cp 2_6_cp.c)
 add_executable(2_7_file_mode 2_7_file_mode.c)
 add_executable(2_8_file_stat 2_8_file_stat.c)
 add_executable(2_12_signal 2_12_signal.c)
+add_executable(2_13_signal 2_13_signal.c)
