Add 2.15 code snippet

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_executable(2_8_file_stat 2_8_file_stat.c)
 add_executable(2_12_signal 2_12_signal.c)
 add_executable(2_13_signal 2_13_signal.c)
 add_executable(2_14_resources 2_14_resources.c)
+add_executable(2_15_daemon 2_15_daemon.c)
